--- a/mymwebsite/templates/videos.html
+++ b/mymwebsite/templates/videos.html
@@ -9,9 +9,9 @@
     <hr>
     <h4>{% trans "Explainer Video" %}</h4>
     <p></p>
-    <div id="videosview">
+    <div id="videosviewexplainer">
         <div class="d-flex align-content-start flex-wrap" style="width: 40rem">
-            <div class="card card-outline-primary m-2">
+            <div id="video_explainer" class="card card-outline-primary m-2">
                 <div class="card-header text-primary">
                     <p class="card-text">{% trans "Explainer Video" %}</p>
                 </div>
@@ -32,9 +32,9 @@
     <hr>
     <h4>{% trans "Mobile App Videos" %}</h4>
     <p></p>
-    <div id="videosview">
+    <div id="videosviewmobapp">
         <div class="d-flex align-content-start flex-wrap">
-            <div class="card card-outline-primary m-2">
+            <div id="video_mobapp_firststeps" class="card card-outline-primary m-2">
                 <div class="card-header text-primary">
                     <p class="card-text">{% trans "First Steps" %}</p>
                 </div>
@@ -49,7 +49,7 @@
                         allowfullscreen></iframe>
                 {% endif %}
             </div>
-            <div class="card card-outline-primary m-2">
+            <div id="video_mobapp_featuretour" class="card card-outline-primary m-2">
                 <div class="card-header text-primary">
                     <p class="card-text">{% trans "Feature Tour" %}</p>
                 </div>
@@ -64,7 +64,7 @@
                         allowfullscreen></iframe>
                 {% endif %}
             </div>
-            <div class="card card-outline-primary m-2">
+            <div id="video_mobapp_usingar" class="card card-outline-primary m-2">
                 <div class="card-header text-primary">
                     <p class="card-text">{% trans "Using Augmented Reality" %}</p>
                 </div>
@@ -79,7 +79,7 @@
                         allowfullscreen></iframe>
                 {% endif %}
             </div>
-            <div class="card card-outline-primary m-2">
+            <div id="video_mobapp_capturingmedia" class="card card-outline-primary m-2">
                 <div class="card-header text-primary">
                     <p class="card-text">{% trans "Capturing Images and Videos" %}</p>
                 </div>
@@ -101,7 +101,7 @@
     <hr>
     <h4>{% trans "Web App Videos" %}</h4>
     <p></p>
-    <div id="videosview">
+    <div id="videosviewwebapp">
         <div class="d-flex align-content-start flex-wrap">
             <div class="card card-outline-primary m-2">
                 <div class="card-header text-primary">
@@ -118,7 +118,7 @@
                         allowfullscreen></iframe>
                 {% endif %}
             </div>
-            <div class="card card-outline-primary m-2">
+            <div id="video_webapp_cfgvpstags" class="card card-outline-primary m-2">
                 <div class="card-header text-primary">
                     <p class="card-text">{% trans "Configuring VPs and TAGs" %}</p>
                 </div>
@@ -133,7 +133,7 @@
                         allowfullscreen></iframe>
                 {% endif %}
             </div>
-            <div class="card card-outline-primary m-2">
+            <div id="video_webapp_mediadata" class="card card-outline-primary m-2">
                 <div class="card-header text-primary">
                     <p class="card-text">{% trans "Media and Data" %}</p>
                 </div>
