--- a/mymwebsite/templates/faq.html
+++ b/mymwebsite/templates/faq.html
@@ -6,8 +6,9 @@
     <p></p>
     <h3>{% trans "Frequently Asked Questions" %}</h3>
     <p></p>
-
-    <div id="accordion" role="tablist" aria-multiselectable="true">
+    <h3>{% trans "GENERAL QUESTIONS" %}</h3>
+    <p></p>
+    <div id="accordion1" role="tablist" aria-multiselectable="true">
         <div class="card">
             <div class="card-header" role="tab" id="headingOne">
                 <h5 class="mb-0">
@@ -17,7 +18,6 @@
                     </a>
                 </h5>
             </div>
-
             <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne">
                 <div class="card-block">
                     {% trans "Because there is no substitute for your own eyes and ears! With MyMensor, it is like being there. Using our technology you will know where and when the photos and videos were taken. You will also be certain that photos and videos where not tampered with." %}
@@ -52,6 +52,11 @@
                 </div>
             </div>
         </div>
+    </div>
+    <p></p>
+    <h3>{% trans "WEB APP RELATED QUESTIONS" %}</h3>
+    <p></p>
+    <div id="accordion2" role="tablist" aria-multiselectable="true">
         <div class="card">
             <div class="card-header" role="tab" id="headingThree">
                 <h5 class="mb-0">
@@ -146,7 +151,8 @@
                 <div class="card-block">
                     {% trans "Click in the register button and follow the instructions!" %}
                     <br/>
-                    {% trans "More info can be found in the videos section, specially on the Mymensor Mobile App - First Steps " %}<a href="{% url 'videos' %}#video_mobapp_firststeps">{% trans "Video" %}</a>
+                    {% trans "More info can be found in the videos section, specially on the Mymensor Mobile App - First Steps " %}<a
+                        href="{% url 'videos' %}#video_mobapp_firststeps">{% trans "Video" %}</a>
                 </div>
             </div>
         </div>
@@ -161,7 +167,8 @@
             </div>
             <div id="collapse9" class="collapse" role="tabpanel" aria-labelledby="heading9">
                 <div class="card-block">
-                    {% trans "Info can be found in the videos section, specially on the Mymensor Mobile App - Feature Tour " %}<a href="{% url 'videos' %}#video_mobapp_featuretour">{% trans "Video" %}</a>
+                    {% trans "Info can be found in the videos section, specially on the Mymensor Mobile App - Feature Tour " %}<a
+                        href="{% url 'videos' %}#video_mobapp_featuretour">{% trans "Video" %}</a>
                 </div>
             </div>
         </div>
@@ -176,7 +183,8 @@
             </div>
             <div id="collapse10" class="collapse" role="tabpanel" aria-labelledby="heading10">
                 <div class="card-block">
-                    {% trans "Info can be found in the videos section, specially on the Mymensor Mobile App - Using Augmented Reality " %}<a href="{% url 'videos' %}#video_mobapp_usingar">{% trans "Video" %}</a>
+                    {% trans "Info can be found in the videos section, specially on the Mymensor Mobile App - Using Augmented Reality " %}<a
+                        href="{% url 'videos' %}#video_mobapp_usingar">{% trans "Video" %}</a>
                 </div>
             </div>
         </div>
@@ -191,7 +199,8 @@
             </div>
             <div id="collapse11" class="collapse" role="tabpanel" aria-labelledby="heading11">
                 <div class="card-block">
-                    {% trans "Info can be found in the videos section, specially on the Mymensor Mobile App - Capture Images and Videos " %}<a href="{% url 'videos' %}#video_mobapp_capturingmedia">{% trans "Video" %}</a>
+                    {% trans "Info can be found in the videos section, specially on the Mymensor Mobile App - Capture Images and Videos " %}<a
+                        href="{% url 'videos' %}#video_mobapp_capturingmedia">{% trans "Video" %}</a>
                 </div>
             </div>
         </div>
@@ -206,7 +215,8 @@
             </div>
             <div id="collapse12" class="collapse" role="tabpanel" aria-labelledby="heading12">
                 <div class="card-block">
-                    {% trans "Info can be found in the videos section, specially on the Mymensor Web App - Feature Tour " %}<a href="{% url 'videos' %}#video_webapp_featuretour">{% trans "Video" %}</a>
+                    {% trans "Info can be found in the videos section, specially on the Mymensor Web App - Feature Tour " %}<a
+                        href="{% url 'videos' %}#video_webapp_featuretour">{% trans "Video" %}</a>
                 </div>
             </div>
         </div>
@@ -221,7 +231,8 @@
             </div>
             <div id="collapse13" class="collapse" role="tabpanel" aria-labelledby="heading13">
                 <div class="card-block">
-                    {% trans "Info can be found in the videos section, specially on the Mymensor Web App - Configuring VPs and TAGs " %}<a href="{% url 'videos' %}#video_webapp_cfgvpstags">{% trans "Video" %}</a>
+                    {% trans "Info can be found in the videos section, specially on the Mymensor Web App - Configuring VPs and TAGs " %}<a
+                        href="{% url 'videos' %}#video_webapp_cfgvpstags">{% trans "Video" %}</a>
                 </div>
             </div>
         </div>
@@ -236,7 +247,8 @@
             </div>
             <div id="collapse14" class="collapse" role="tabpanel" aria-labelledby="heading14">
                 <div class="card-block">
-                    {% trans "Info can be found in the videos section, specially on the Mymensor Web App - Media and Data " %}<a href="{% url 'videos' %}#video_webapp_mediadata">{% trans "Video" %}</a>
+                    {% trans "Info can be found in the videos section, specially on the Mymensor Web App - Media and Data " %}<a
+                        href="{% url 'videos' %}#video_webapp_mediadata">{% trans "Video" %}</a>
                 </div>
             </div>
         </div>
@@ -251,7 +263,8 @@
             </div>
             <div id="collapse15" class="collapse" role="tabpanel" aria-labelledby="heading15">
                 <div class="card-block">
-                    {% trans "Please check our explainer video at the top of our video section." %}<a href="{% url 'videos' %}#video_explainer">{% trans "Video" %}</a>
+                    {% trans "Please check our explainer video at the top of our video section." %}<a
+                        href="{% url 'videos' %}#video_explainer">{% trans "Video" %}</a>
                 </div>
             </div>
         </div>
@@ -395,6 +408,11 @@
                 </div>
             </div>
         </div>
+    </div>
+    <p></p>
+    <h3>{% trans "MOBILE APP RELATED QUESTIONS" %}</h3>
+    <p></p>
+    <div id="accordion3" role="tablist" aria-multiselectable="true">
         <div class="card">
             <div class="card-header" role="tab" id="heading26">
                 <h5 class="mb-0">
