--- a/mymwebsite/templates/faq.html
+++ b/mymwebsite/templates/faq.html
@@ -6,7 +6,7 @@
     <p></p>
     <h3>{% trans "Frequently Asked Questions" %}</h3>
     <p></p>
-    <h3>{% trans "GENERAL QUESTIONS" %}</h3>
+    <h4>{% trans "GENERAL QUESTIONS" %}</h4>
     <p></p>
     <div id="accordion1" role="tablist" aria-multiselectable="true">
         <div class="card">
@@ -18,7 +18,7 @@
                     </a>
                 </h5>
             </div>
-            <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne">
+            <div id="collapseOne" class="collapse" role="tabpanel" aria-labelledby="headingOne">
                 <div class="card-block">
                     {% trans "Because there is no substitute for your own eyes and ears! With MyMensor, it is like being there. Using our technology you will know where and when the photos and videos were taken. You will also be certain that photos and videos where not tampered with." %}
                     {% trans "Do you need to be sure that something was done? Use MyMensor to verify completion, with precise location and timing." %}
@@ -120,7 +120,7 @@
         </div>
     </div>
     <p></p>
-    <h3>{% trans "WEB APP RELATED QUESTIONS" %}</h3>
+    <h4>{% trans "WEB APP RELATED QUESTIONS" %}</h4>
     <p></p>
     <div id="accordion2" role="tablist" aria-multiselectable="true">
         <div class="card">
@@ -410,7 +410,7 @@
         </div>
     </div>
     <p></p>
-    <h3>{% trans "MOBILE APP RELATED QUESTIONS" %}</h3>
+    <h4>{% trans "MOBILE APP RELATED QUESTIONS" %}</h4>
     <p></p>
     <div id="accordion3" role="tablist" aria-multiselectable="true">
         <div class="card">
