--- a/mymwebsite/templates/faq.html
+++ b/mymwebsite/templates/faq.html
@@ -285,13 +285,13 @@
         <div class="card">
             <div class="card-header" role="tab" id="heading18">
                 <h5 class="mb-0">
-                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse18"
-                       aria-expanded="false" aria-controls="collapse18">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse18a"
+                       aria-expanded="false" aria-controls="collapse18a">
                         {% trans "How do I delete an image or video?" %}
                     </a>
                 </h5>
             </div>
-            <div id="collapse18" class="collapse" role="tabpanel" aria-labelledby="heading18">
+            <div id="collapse18a" class="collapse" role="tabpanel" aria-labelledby="heading18">
                 <div class="card-block">
                     {% trans "In the Mobile, while seing the captures, touch the trash bin to erase the photo only on the smartphone." %}
                     {% trans "To delete the image in the database you need to locate it in the Media page, there you will find a trash bin where you can make the final deletion from the database." %}
@@ -363,13 +363,13 @@
         <div class="card">
             <div class="card-header" role="tab" id="heading33">
                 <h5 class="mb-0">
-                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse33"
-                       aria-expanded="false" aria-controls="collapse33">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse33a"
+                       aria-expanded="false" aria-controls="collapse33a">
                         {% trans "Filed in the wrong folder a capture without augmented reality?" %}
                     </a>
                 </h5>
             </div>
-            <div id="collapse33" class="collapse" role="tabpanel" aria-labelledby="heading33">
+            <div id="collapse33a" class="collapse" role="tabpanel" aria-labelledby="heading33">
                 <div class="card-block">
                     {% trans "In the MyMensor Web App, enter the media tab, select the VP and identify the media you want. Set the new destination folder and click the move button." %}
                 </div>
@@ -542,13 +542,13 @@
         <div class="card">
             <div class="card-header" role="tab" id="heading31">
                 <h5 class="mb-0">
-                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse31"
-                       aria-expanded="false" aria-controls="collapse31">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse31a"
+                       aria-expanded="false" aria-controls="collapse31a">
                         {% trans "How do I manually share a specific media?" %}
                     </a>
                 </h5>
             </div>
-            <div id="collapse31" class="collapse" role="tabpanel" aria-labelledby="heading31">
+            <div id="collapse31a" class="collapse" role="tabpanel" aria-labelledby="heading31">
                 <div class="card-block">
                     {% trans "In the MyMensor Mobile App, click on the VP folder where the media is located, click on the gallery icon to see the captured media and find the one of interest. Click the share button and the list of apps available on your smartphone will appear for sharing." %}
                     {% trans "In the MyMensor Web App, enter the media tab, select the VP where the media is located or click directly on the location icon when you are in the Portfolio tab. Just select the app you want to use for sharing now." %}
