--- a/mymwebsite/templates/faq.html
+++ b/mymwebsite/templates/faq.html
@@ -3,13 +3,10 @@
 {% block title %}FAQ - {{ block.super }}{% endblock %}
 {% block content %}
     {% get_current_language as LANGUAGE_CODE %}
-    <p></p>
-    <p></p>
-    <h3>{% trans "Frequently Asked Questions" %}</h3>
-    <p></p>
-    <p></p>
+    <div style="padding-top: 20px; padding-bottom: 20px">
+        <h3>{% trans "Frequently Asked Questions" %}</h3>
+    </div>
     <h4>{% trans "GENERAL QUESTIONS" %}</h4>
-    <p></p>
     <div id="accordion1" role="tablist" aria-multiselectable="true">
         <div class="card">
             <div class="card-header" role="tab" id="headingOne">
@@ -122,7 +119,9 @@
         </div>
     </div>
     <p></p>
-    <h4>{% trans "MOBILE APP RELATED QUESTIONS" %}</h4>
+    <div style="padding-top: 20px;">
+        <h4>{% trans "MOBILE APP RELATED QUESTIONS" %}</h4>
+    </div>
     <p></p>
     <div id="accordion2" role="tablist" aria-multiselectable="true">
         <div class="card">
@@ -380,7 +379,9 @@
 
     </div>
     <p></p>
-    <h4>{% trans "WEB APP RELATED QUESTIONS" %}</h4>
+    <div style="padding-top: 20px;">
+        <h4>{% trans "WEB APP RELATED QUESTIONS" %}</h4>
+    </div>
     <p></p>
     <div id="accordion3" role="tablist" aria-multiselectable="true">
         <div class="card">
