--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -254,6 +254,13 @@
                 </div>
             </div>
 
+            <div class="block app-ribbon py-5">
+                <div class="container text-xs-center" style="padding-bottom: 3rem;">
+                    <h6 class="text-muted text-uppercase mb-2">{% trans "30-day free trial" %}</h6>
+                    <h3>{% trans "Try Now! No Credit Card required during trial period!" %}</h3>
+                </div>
+            </div>
+
             <div class="block app-price-plans">
                 <div class="container text-center">
 
