--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -300,7 +300,7 @@
                         <div class="col-md-4 px-4 pb-2 mb-5">
                             <div class="px-2">
                                 <h5 class="text-primary mb-4 alert alert-info">MyMensor<strong>AR</strong></h5>
-                                <img class="mb-4" src="{% static "images/price.svg" %}">
+                                <h3 id="price" style="font-size: 5rem; letter-spacing: -.5rem;"><span id="currency" style="font-size: 2.75rem; position: relative; font-weight: 400; top: -20px; letter-spacing: 0px;">€</span>10,50<span style="font-size: 2rem; letter-spacing: 0px;">{% trans "/month" %}</span></h3>
                                 <p class="pb-2">{% trans "The one size fits all solution. Use Augmented Reality and Data Features to control your personal and business projects" %}</p>
                             </div>
 
@@ -372,3 +372,4 @@
         </script>
     {% endblock %}
 {% endlocaltime %}
+
