--- a/mymwebsite/templates/base.html
+++ b/mymwebsite/templates/base.html
@@ -104,6 +104,31 @@
                             <input class="btn btn-primary btn-sm" type="submit" value="{% trans 'Set' %}"/>
                         </form>
                     </div>
+                    <div class="col-md-3 mb-3"></div>
+                    <div class="col-md-4 mb-3">
+                        <a href="https://www.braintreegateway.com/merchants/2y7nzj4w7xt29z45/verified" target="_blank">
+                            <img src="https://s3.amazonaws.com/braintree-badges/braintree-badge-wide-dark.png"
+                                 width="280px"
+                                 height="44px" border="0"/>
+                        </a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-5 mb-3"></div>
+                    <div class="col-md-3 mb-3"></div>
+                    <div class="col-md-4 mb-3">
+                        <img src="{% static 'images/paypal.png' %}">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-5 mb-3"></div>
+                    <div class="col-md-3 mb-3"></div>
+                    <div class="col-md-4 mb-3">
+                        <img src="{% static 'images/discover.png' %}">
+                        <img src="{% static 'images/maestro.png' %}">
+                        <img src="{% static 'images/mastercard.png' %}">
+                        <img src="{% static 'images/visa.png' %}">
+                    </div>
                 </div>
             </div>
         </div>
