--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -381,7 +381,7 @@
                 }
                 if (counter == 1) {
                     pric_elem0.hidden=false;
-                    pric_elem2.hidden=false;
+                    pric_elem2.hidden=true;
                 }
                 counter++;
                 if(counter >= 2) { counter = 0; }
