--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -111,10 +111,10 @@
                     <div class="row app-align-center">
 
                         <div class="col-sm-5 hidden-sm-down">
-                            <a href="#"
-                               data-toggle="tooltip" data-placement="top"
+                            <a href="https://app.mymensor.com/landing/?type=1&key=cap/jorge/0_p_1499692368989.jpg&signature=93277C3614CA49FDC20E0CE4F0EA958E72AC9FC8B4CA1ACD575DBFF40E32D580"
+                               target="_blank" data-toggle="tooltip" data-placement="top"
                                title="{% trans 'Click to see an example of what you can distribute to everybody!' %}">
-                                <img class="app-iphone" src="{% static 'images/compostelamediacheck2.jpeg' %}" alt=""
+                                <img class="app-iphone" src="{% static 'images/bragaportanova.jpeg' %}" alt=""
                                      style="width: 120%;">
                             </a>
                         </div>
