--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -27,13 +27,19 @@
         <div class="stage-shelf stage-shelf-right hidden" id="sidebar">
             <ul class="nav nav-bordered nav-stacked flex-column">
                 <li class="nav-item">
-                    <a class="nav-link active" href="{% url 'docs' %}">{% trans "Docs" %}</a>
+                    <a class="nav-link active" href="{% url 'cases' %}">{% trans "Cases" %}</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'docs' %}">{% trans "Docs" %}</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'videos' %}">{% trans "Videos" %}</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'faq' %}">{% trans "FAQ" %}</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'download' %}">{% trans "Download" %}</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link"
@@ -68,6 +74,9 @@
                         <div class="hidden-sm-down text-uppercase">
                             <ul class="navbar-nav">
                                 <li class="nav-item px-1 ">
+                                    <a class="nav-link" href="{% url 'cases' %}">{% trans "Cases" %}</a>
+                                </li>
+                                <li class="nav-item px-1 ">
                                     <a class="nav-link" href="{% url 'docs' %}">{% trans "Docs" %}</a>
                                 </li>
                                 <li class="nav-item px-1 ">
@@ -75,6 +84,9 @@
                                 </li>
                                 <li class="nav-item px-1 ">
                                     <a class="nav-link" href="{% url 'faq' %}">{% trans "FAQ" %}</a>
+                                </li>
+                                <li class="nav-item px-1 ">
+                                    <a class="nav-link" href="{% url 'download' %}">{% trans "Download" %}</a>
                                 </li>
                                 <li class="nav-item px-1 ">
                                     <a class="nav-link"
@@ -267,14 +279,14 @@
                     <div class="row mb-5">
                         <div class="col-md-8 offset-md-2 col-lg-6 offset-lg-3">
                             <h6 class="text-muted text-uppercase mb-2">{% trans "Business Talk" %}</h6>
-                            <h3>{% trans "Simple plans. Direct to the point." %}</h3>
+                            <h3>{% trans "Simple plans. Direct and clear." %}</h3>
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="col-md-4 px-4 pb-2 mb-5">
                             <div class="px-2 mb-2">
-                                <h5 class="text-primary mb-4 alert alert-info">MyMensor</h5>
+                                <h5 class="text-primary mb-4 alert alert-info">MyMensor <strong>Media</strong></h5>
                                 {% if LANGUAGE_CODE == "pt" %}
                                     <img class="mb-4" src="{% static "images/comingsooncomp_pt.svg" %}">
                                 {% elif LANGUAGE_CODE == "pt-br" %}
@@ -291,7 +303,10 @@
                                 <li class="py-4">
                                     <strong>{% trans "Sharing" %}</strong>{% trans " automatic sharing to Facebook, Twitter and Email." %}
                                 </li>
+                                <li class="py-4">
+                                    <strong>{% trans "AR" %}</strong>{% trans " automatic and precise captures" %}</li>
                                 <li class="py-4"><strong>{% trans "Secure" %}</strong>{% trans " all HTTPS" %}</li>
+                                <li class="py-4"><strong>{% trans "Mobile App" %}</strong>{% trans " use both MyMensor and MyMensorAR apps, you choose!" %}</li>
                             </ul>
 
                             <button class="btn btn-lg btn-secondary btn-block">{% trans "COMING SOON" %}</button>
@@ -299,26 +314,24 @@
 
                         <div class="col-md-4 px-4 pb-2 mb-5">
                             <div class="px-2">
-                                <h5 class="text-primary mb-4 alert alert-info">MyMensor<strong>AR</strong></h5>
+                                <h5 class="text-primary mb-4 alert alert-info">MyMensor <strong>Media and Data</strong></h5>
                                 <h3 id="priceeur" style="font-size: 5rem; letter-spacing: -.5rem;"><span id="currency" style="font-size: 2.75rem; position: relative; font-weight: 400; top: -20px; letter-spacing: 0px;">€</span>10,99<span style="font-size: 2rem; letter-spacing: 0px;">{% trans "/month" %}</span></h3>
                                 <h3 hidden id="priceusd" style="font-size: 5rem; letter-spacing: -.5rem;"><span id="currency" style="font-size: 2.75rem; position: relative; font-weight: 400; top: -20px; letter-spacing: 0px;">$</span>11.99<span style="font-size: 2rem; letter-spacing: 0px;">{% trans "/month" %}</span></h3>
-                                <p class="pb-2">{% trans "The one size fits all solution. Use Augmented Reality and Data Features to control your personal and business projects" %}</p>
+                                <p class="pb-2">{% trans "The one size fits all solution. Use Media and Data Features to control your personal and business projects" %}</p>
                             </div>
 
                             <ul class="list-unstyled list-bordered text-xs-left my-4">
-                                <li class="py-4"><strong>{% trans "ALL MyMensor FEATURES PLUS" %}</strong></li>
-                                <li class="py-4">
-                                    <strong>{% trans "AR" %}</strong>{% trans " automatic and precise captures" %}</li>
+                                <li class="py-4"><strong>{% trans "ALL MyMensor Media FEATURES PLUS" %}</strong></li>
                                 <li class="py-4">
                                     <strong>{% trans "Database" %}</strong>{% trans " build your own bigdata" %}</li>
                             </ul>
                             <a class="btn btn-primary btn-lg btn-block"
                                href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/"
-                               role="button">{% trans "Start MyMensorAR account" %}</a>
+                               role="button">{% trans "Start Now" %}</a>
                         </div>
                         <div class="col-md-4 px-4 pb-1 mb-5">
                             <div class="px-2">
-                                <h5 class="text-primary mb-4 alert alert-info">MyMensor<strong>CORP</strong></h5>
+                                <h5 class="text-primary mb-4 alert alert-info">MyMensor <strong>CUSTOM</strong></h5>
                                 {% if LANGUAGE_CODE == "pt" %}
                                     <img class="mb-4" src="{% static "images/uponrequestcomp_pt.svg" %}">
                                 {% elif LANGUAGE_CODE == "pt-br" %}
@@ -326,10 +339,10 @@
                                 {% else %}
                                     <img class="mb-4" src="{% static "images/uponrequestcomp.svg" %}">
                                 {% endif %}
-                                <p class="pb-2">{% trans "A taylor made solution for your corporation. Drop us an email and we will build your custom setup together." %}</p>
+                                <p class="pb-2">{% trans "A taylor made solution for you. Drop us an email and we will build your custom setup together." %}</p>
                             </div>
                             <ul class="list-unstyled list-bordered text-xs-left my-4">
-                                <li class="py-4"><strong>{% trans "ALL MyMensorAR FEATURES PLUS" %}</strong></li>
+                                <li class="py-4"><strong>{% trans "ALL MyMensor Media and Data FEATURES PLUS" %}</strong></li>
                                 <li class="py-4"><strong>{% trans "API access" %}</strong>{% trans " upon request" %}
                                 </li>
                                 <li class="py-4"><strong>{% trans "Mobile App" %}</strong>{% trans " custom setups" %}
